# soltd

./: .gitignore
app/: .env.example  package.json  pnpm-lock.yaml
app/components/: ChopTreeButton.tsx  InitPlayerButton.tsx  SessionKeyButton.tsx  SpectatorBanner.tsx  TowerDefenseBoard.tsx  TowerDefenseGameOverModal.tsx  TowerDefenseHowToPlay.tsx  TowerDefenseHud.tsx  TowerDefenseLeaderboard.tsx  TowerDefensePanel.tsx
app/contexts/: GameStateProvider.tsx  TowerDefenseProvider.tsx  WalletContextProvider.tsx
app/idl/: lumberjack.ts
app/pages/: _app.tsx  index.tsx  towerdefense.tsx
app/public/assets/: manifest.json
app/scripts/: gen-tileset.mjs
app/styles/: globals.css
app/utils/: anchor.ts  tdAssets.ts  tdDefs.ts  tdSession.ts  tdSim.ts
program/: Anchor.toml  package.json  pnpm-lock.yaml
program/programs/lumberjack/: Cargo.toml
program/programs/lumberjack/src/: constants.rs  errors.rs  lib.rs
program/programs/lumberjack/src/instructions/: mod.rs  td_advance_game.rs  td_entry_fee.rs  td_init_board.rs  td_init_highscore.rs  td_init_pool.rs  td_place_tower.rs  td_reset_board.rs  td_reset_highscore.rs  td_spawn_wave.rs  td_upgrade_tower.rs
program/programs/lumberjack/src/state/: highscore.rs  mod.rs  td_board.rs
program/scripts/: gen-defs.js
program/tests/: lumberjack.ts  td_sim.ts  towerdefense.ts
unity/Lumberjack/Assets/: AndroidSafeZone.cs  CloneAuthorizationButton.cs  ConnectButton.cs  DeauthorizeButton.cs  DisconnectButton.cs  GetCapabilitiesButton.cs  LogoutButton.cs  ReconnectButton.cs  SignAndSendButton.cs  SignInButton.cs  (+1 more)
(+11 files in other folders)
